LTIMessage - mods to debug reporting